Created AVL Tree

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,5 +1,18 @@
+header = [
+	'Header/AVLTree.hpp'
+]
+
+
+implementation = [
+	'Implementation/AVLTree.cpp',
+	'Implementation/Node.cpp'
+]
+
+
 executable(
 	meson.project_name(),
 	'Main.cpp',
+	header,
+	implementation,
 	install : true,
 )
